# Voxima-SkyrimVoiceControl

./: .gitignore  LICENSE  README.md
Additional Files/Plugin Configuration/: Custom.ini  Vanilla.ini
Additional Files/fomod/fomod/: ModuleConfig.xml  info.xml
Base Mod Files/SKSE/Plugins/VOX/Commands/Special/Dragon Riding/Keybinds/: Dragonborn.ini
Base Mod Files/SKSE/Plugins/VOX/Commands/Special/Progressions/: Dragonborn.ini  Vanilla.ini
Base Mod Files/SKSE/Plugins/VOX/Commands/Special/Settings/: Menu Controls.ini  Werewolf Shout.ini
Creation Kit/: DragonbornUnlimited.esp  Voxima - Skyrim Voice Control.esp
Creation Kit/SKSE/Plugins/VOX/: Settings.txt
Creation Kit/SKSE/Plugins/VOX/Commands/Console/: Custom.ini
Creation Kit/SKSE/Plugins/VOX/Commands/Keybinds/: Vanilla.ini
Creation Kit/SKSE/Plugins/VOX/Commands/Special/Horse Riding/Keybinds/: Vanilla.ini
Creation Kit/SKSE/Plugins/VOX/Commands/Special/Progressions/: Custom.ini
Creation Kit/SKSE/Plugins/VOX/Commands/Special/Vampire Lord/Keybinds/: Dawnguard.ini
Creation Kit/SKSE/Plugins/VOX/Commands/Special/Vampire Lord/Powers/: Better Vampires.ini
Creation Kit/SKSE/Plugins/VOX/Commands/Special/Vampire Lord/Spells/: Dawnguard.ini
Creation Kit/SKSE/Plugins/VOX/Game Information/: Powers.txt
Creation Kit/Scripts/: DBU_MCM.pex  VOX_MCM.pex  desktop.ini
Creation Kit/Source/Scripts/: DBU_MCM.psc  VOX_MCM.psc
Latest Version/: Speechless Shouts.esp  Voxima - Skyrim Voice Control.esp
Latest Version/SKSE/Plugins/VOX/Commands/Console/: Custom.ini
Latest Version/SKSE/Plugins/VOX/Commands/Keybinds/: Vanilla.ini  _template.ini
Latest Version/SKSE/Plugins/VOX/Commands/Special/Settings/: Command Variations.ini  Default.ini  Horse Controls.ini  Menu Controls.ini
Latest Version/SKSE/Plugins/VOX/Commands/Special/Vampire Lord/Powers/: Dawnguard.ini
Latest Version/SKSE/Plugins/VOX/Commands/Special/Werewolf/Keybinds/: Vanilla.ini
Latest Version/SKSE/Plugins/VOX/Game Information/: Command.txt  PlayerInfo.txt  Shouts.txt  Spells.txt
Latest Version/Scripts/: VOX_MCM.pex
Latest Version/Source/Scripts/: VOX_MCM.psc  desktop.ini
Plugin/: .clang-format  CMakeLists.txt  CMakePresets.json  animation-events.hpp  device-input-event.hpp  functions.hpp  gamepad-input-event.hpp  load-game-event.hpp  location-discovery-event.hpp  menu-close-event.hpp  plugin.cpp  spell-learned-event.hpp  vcpkg-configuration.json  vcpkg.json  websocket.hpp
Plugin/cmake/: x64-windows-skse.cmake
Plugin/events/: animation-events.hpp  device-input-event.hpp  load-game-event.hpp  location-discovery-event.hpp  menu-close-event.hpp  menu-open-close-event.hpp  morph-changed-event.hpp  spell-learned-event.hpp
Plugin/functions/: SkyrimMessageBox.hpp  functions.hpp  logger.hpp  openvr.hpp  vrinput.hpp  websocket.hpp
Plugin/source/: plugin.cpp
Plugin/vrapi/: OpenVRTypes.hpp  PapyrusVRAPI.hpp  PapyrusVRTypes.cpp  PapyrusVRTypes.hpp  VRHookAPI.hpp  VRManagerAPI.hpp
Plugin/vrinput/: vrinput.hpp
Voice Recognition App/: Voxima-SkyrimVoiceControl.sln
Voice Recognition App/SpeechDictionaryTools/: DictionaryInterface.cs  SpeechDictionaryTools.csproj
Voice Recognition App/SpeechDictionaryTools/Assets/: Skyrim Dictionary Training.txt
Voice Recognition App/SpeechDictionaryTools/Properties/: AssemblyInfo.cs
Voice Recognition App/Utilities/: Log.cs  Logging.cs  ProcessWatcher.cs  Utilities.csproj
Voice Recognition App/Utilities/Properties/: AssemblyInfo.cs
Voice Recognition App/Voxima/: DovahzulPhonemes.Designer.cs  DovahzulPhonemes.resx  Program.cs  Voxima.csproj  packages.config
Voice Recognition App/Voxima-SkyrimVoiceControl/Voxima/: Voxima.csproj
Voice Recognition App/Voxima-SkyrimVoiceControl/Voxima/Properties/: AssemblyInfo.cs
Voice Recognition App/WebSocket/: WebSocket.csproj  WebSocketServer.cs  packages.config
Voice Recognition App/WebSocket/Properties/: AssemblyInfo.cs
Voice Recognition App/WebsocketPortConfigurator/: App.xaml  PortConfigurator.xaml  PortConfigurator.xaml.cs  WebsocketPortConfigurator.csproj
Voice Recognition App/WebsocketPortConfigurator/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
